팀플 완 팀플 완

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,10 @@
 *.zip
 *.xls
 *.docx
+*.pptx
 raw/
 image/
+submit/
 
 # Created by https://www.toptal.com/developers/gitignore/api/r,windows
 # Edit at https://www.toptal.com/developers/gitignore?templates=r,windows
